# marites

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml  README.md
api/examples/: quick_dev.rs
api/sql/dev_inital/: 01-create-schema.sql  02-dev-seed.sql
api/src/: config.rs  error.rs  lib.rs  main.rs
api/src/_dev_utils/: dev_db.rs  mod.rs
api/src/error/: mod.rs
api/src/middlewares/: auth_middleware.rs
api/src/model/: error.rs  mod.rs
api/src/model/store/: mod.rs
api/src/model/task/: mod.rs
api/src/routers/: mod.rs
api/src/routers/v1/auth/: mod.rs
api/src/routers/v1/test/: mod.rs
api/src/routes/: mod.rs
api/src/routes/v1/auth/: error.rs  mod.rs
api/src/routes/v1/test/: mod.rs
api/tests/: quick_dev.rs
archive/api/: Cargo.toml
archive/api/sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
archive/api/src/: config.rs  error.rs  lib.rs
archive/api/src/_dev_utils/: mod.rs
archive/api/src/context/: mod.rs
archive/api/src/model/: base.rs  error.rs  mod.rs
archive/api/src/model/store/: mod.rs
archive/api/src/model/task/: mod.rs
archive/api/src/routes/v1/auth/: error.rs  mod.rs
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20231022_092049_create_user_table.rs
service/: Cargo.toml
service/src/user/: mod.rs  mutation.rs
