[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Rj Lacanlale <rjlacanlaled@gmail.com>"]
repository = "https://github.com/rjlacanlaled/marites"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# -- Web
axum = "0.6"
tower-http = { version = "0.4.4", features = ["fs"] }
tower-cookies = "0.9"

# -- Tracing
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

# -- Data
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
] }

# -- Others
uuid = { version = "1", features = ["v4", "fast-rng"] }
lazy-regex = "3"
async-trait = "0"
strum_macros = "0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.7"
serial_test = "2"
